--- a/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.General.tb_empresa_Info
+﻿@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Empresas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -11,6 +11,11 @@
 
 @using (Html.BeginForm())
 {
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("Importar","Empresa",new { Area = "General", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+        </div>
+    </div>
 
     @Html.Action("GridViewPartial_empresa")
 
