--- a/ERP/Core.Erp.Web/Areas/General/Views/Empresa/_GridViewPartial_Sucursal_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Empresa/_GridViewPartial_Sucursal_importacion.cshtml
@@ -1,10 +1,10 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridViewPartial_catalogoAF_importacion";
-        settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "GridViewPartial_catalogoAF_importacion" };
+        settings.Name = "GridViewPartial_Sucursal_importacion";
+        settings.CallbackRouteValues = new { Controller = "Empresa", Action = "GridViewPartial_Sucursal_importacion" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdCatalogo";
+        settings.KeyFieldName = "IdSucursal";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -48,9 +48,13 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-        settings.Columns.Add("IdCatalogo", "ID").Width = Unit.Percentage(80);
-        settings.Columns.Add("IdTipoCatalogo", "Tipo").Width = Unit.Percentage(80);
-        settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(80);
+        settings.Columns.Add("IdSucursal", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("codigo", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("Su_Descripcion", "Descripción").Width = Unit.Percentage(10);
+        settings.Columns.Add("Su_CodigoEstablecimiento", "Código de establecimiento").Width = Unit.Percentage(10);
+        settings.Columns.Add("Su_Ruc", "RUC").Width = Unit.Percentage(10);
+        settings.Columns.Add("Su_Telefonos", "Télefonos").Width = Unit.Percentage(10);
+        settings.Columns.Add("Su_Direccion", "Dirección").Width = Unit.Percentage(10);
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
