--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Cuentas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -11,6 +11,11 @@
 @using (Html.BeginForm())
 {
 
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("Importar","BancoCuenta",new { Area = "Banco", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+        </div>
+    </div>
     @Html.Action("GridViewPartial_cuentas")
 
 }
