--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_Documento_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_Documento_importacion.cshtml
@@ -49,13 +49,23 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("IdTipo_Persona", "Tipo").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdBanco", "Establecimiento").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdBanco", "Cuenta bancaria").Width = Unit.Percentage(20);
-        settings.Columns.Add("cb_Fecha", "Fecha").Width = Unit.Percentage(10);
-        settings.Columns.Add("cb_Observación", "Observación").Width = Unit.Percentage(10);
+        settings.Columns.Add("Su_Descripcion", "Establecimiento").Width = Unit.Percentage(10);
+        settings.Columns.Add("ba_descripcion", "Cuenta bancaria").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "cb_Fecha";
+            column.Caption = "Fecha";
+            column.Width = Unit.Percentage(10);
+            column.PropertiesEdit.DisplayFormatString = "d";
+            column.EditorProperties().DateEdit(sp =>
+            {
+                column.PropertiesEdit.DisplayFormatString = "d";
+                sp.Width = Unit.Percentage(100);
+            });
+        }); settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(10);
         settings.Columns.Add("cb_Valor", "Valor").Width = Unit.Percentage(20);
 
-       
+
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
