--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
@@ -193,7 +193,7 @@
                                        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
-                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                   }).BindList(ViewBag.lst_tipo_op).GetHtml()
                                 @Html.ValidationMessageFor(q => q.IdTipo_op_sueldo_por_pagar, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                                        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
-                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                   }).BindList(ViewBag.lst_tipo_op).GetHtml()
                                 @Html.ValidationMessageFor(q => q.IdTipo_op_prestamos, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                                        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
-                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                   }).BindList(ViewBag.lst_tipo_op).GetHtml()
                                 @Html.ValidationMessageFor(q => q.IdTipo_op_acta_finiquito, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -307,7 +307,7 @@
                                        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
-                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                   }).BindList(ViewBag.lst_tipo_op).GetHtml()
                                 @Html.ValidationMessageFor(q => q.IdTipo_op_vacaciones, "", new { @class = "text-danger" })
                             </div>
                         </div>
