--- a/ERP/Core.Erp.Web/Areas/General/Views/ParametrosGeneral/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ParametrosGeneral/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.Banco.ba_parametros_Info
+﻿@model Core.Erp.Info.General.tb_parametro_Info
 @{
-    ViewBag.Title = "Parámetros de banco";
+    ViewBag.Title = "Parámetros generales";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -8,45 +8,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Index", "ParametroBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Index", "ParametrosGeneral", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label for="CiudadDefaultParaCrearCheques">Ciudad por defecto para los cheques </label>
-                    @Html.DevExpress().ComboBoxFor(q => q.CiudadDefaultParaCrearCheques, settings =>
-               {
-                   settings.Name = "CiudadDefaultParaCrearCheques";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCiudad", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Descripcion_Ciudad", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCiudad";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "Descripcion_Ciudad";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_ciudad).GetHtml()
-                    @Html.ValidationMessageFor(q => q.CiudadDefaultParaCrearCheques, "", new { @class = "text-danger" })
+                    <label for="">Impuesto*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_imp, "IdCod_Impuesto", "nom_impuesto"), new { @class = "form-control", })
+                    @Html.ValidationMessageFor(q => q.IdCod_Impuesto, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
+
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="DiasTransaccionesAFuturo">Dias máximos para transacciones a futuro</label>
-                    @Html.TextBoxFor(q => q.DiasTransaccionesAFuturo, new { @class = "form-control", @id = "DiasTransaccionesAFuturo" })
-                    @Html.ValidationMessageFor(q => q.DiasTransaccionesAFuturo, "", new { @class = "text-danger" })
+                    <label for="Porcentaje">Porcentaje*</label>
+                    @Html.TextBoxFor(q => q.Porcentaje, new { @class = "form-control", @id = "DiasTransaccionesAFuturo" })
+                    @Html.ValidationMessageFor(q => q.Porcentaje, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="EsMultiSucursal"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.EsMultiSucursal, settings =>
+                           {
+                               settings.Name = "EsMultiSucursal";
+                               settings.Text = "Es multisucursal";
+
+                           }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.EsMultiSucursal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
         </div>
     </div>
     <div class="box-footer">
